# py-identity-model

./: .env.descope.example  .env.keycloak  .env.node-oidc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION_PLAN.md  Makefile  PROMPT.md  PR_108_CODE_REVIEW.md  README.md  clean_makefile.sh  code_review_comments.md  descope-coverage-issues-draft.md  mkdocs.yml  py_identity_model_roadmap.md  pyproject.toml  ralph.yml  requirements-dev.txt  requirements.txt  setup.py  sonar-project.properties
.ai/: guidelines.md
.claude/: development-guide.md  task-state.md
.github/: ISSUE_HTTP_CLIENT_DI.md  dependabot.yml
.github/workflows/: build.yml  check-pr.yml  ci.yml  codeql.yml  conformance-hosted.yml  conformance.yml  dependabot-auto-merge.yml  docs.yml  publish-dist.yml  publish-prerelease.yml  release-fastapi.yml  release.yml  sonarcloud.yml  update-dependencies.yml
.ralph/: current-events  current-loop-id  events-20260329-044605.jsonl  history.jsonl
.ralph/agent/: scratchpad.md  summary.md  tasks.jsonl
conformance/: Dockerfile  Dockerfile.fastapi  README.md  app.py  app_fastapi.py  docker-compose.yml  requirements.txt  run_tests.py
conformance/configs/: backchannel-logout-rp.json  basic-rp.json  config-rp.json  dynamic-rp.json  fastapi-basic-rp.json  fastapi-config-rp.json  fastapi-form-post-basic-rp.json  form-post-basic-rp.json  (+1 more)
docs/: architecture-improvements.md  certification.md  contributing.md  discovery_specification_compliance_assessment.md  faq.md  getting-started.md  identity-server-example.md  identityserver-gaps.md  index.md  integration-tests.md  jwks_specification_compliance_assessment.md  migration-guide.md  performance.md  pre-release-guide.md  py_identity_model_roadmap.md  sonar-vulnerability-analysis.md  troubleshooting.md
examples/: async_examples.py  auth_code_pkce_example.py  authorize_callback_example.py  base_classes_example.py  device_auth_example.py  discovery_policy_example.py  docker-compose.test.yml  dpop_example.py  enhanced_token_validation_example.py  fapi_example.py  generate_token.py  http_client_di_example.py  introspection_example.py  jar_example.py  mixed_usage.py  par_example.py  private_key_jwt_example.py  refresh_token_example.py  revocation_example.py  run-tests.sh  sync_examples.py  token_exchange_example.py
examples/descope/: .env.example  Dockerfile  Dockerfile.test  README.md  __init__.py  app.py  dependencies.py  entrypoint-test.sh  entrypoint.sh  middleware.py  pyproject.toml  test_integration.py  token_refresh.py
examples/fastapi/: Dockerfile  Dockerfile.test  README.md  __init__.py  app.py  dependencies.py  entrypoint-test.sh  entrypoint.sh  middleware.py  pyproject.toml  requirements.txt  test_integration.py  token_refresh.py
py_identity_model/: __init__.py  discovery.py  exceptions.py  identity.py  jwks.py  jwt_claim_types.py  token_validation.py
py_oidc/: __init__.py  discovery.py  exceptions.py  jwks.py  token_client.py  token_validation.py
scripts/: mirror-dependabot-secrets.sh
tests/: README.md  jwks.json  jwks_request_tests.py  ory_create_client.sh  test_discovery.py  test_json_web_key.py  test_jwks.py  test_token_client.py  test_token_validation.py  test_utils.py
tools/: release_parsers.py
(+281 files in other folders)
