[project]
name = "py-identity-model"
version = "0.15.0"
description = "OAuth2.0 and OpenID Connect Client Library"
authors = [{ name = "jamescrowley321", email = "jamescrowley151@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "PyJWT>=2.9.0,<3",
    "requests>=2.32.3,<3",
    "cryptography>=45.0.2,<46",
]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "black>=24.8.0,<25",
    "flake8>=7.1.1,<8",
    "pre-commit>=3.8.0,<4",
    "python-dotenv>=1.0.1,<2",
    "pytest>=8.3.2,<9",
    "ruff>=0.11.12",
]

[build-system]
requires = ["uv_build>=0.6,<0.7"]
build-backend = "uv_build"
