[project]
name = "descope-fastapi-example"
version = "1.0.0"
description = "FastAPI example with Descope and py-identity-model"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "py-identity-model>=2.0.0",
    "pytest>=8.3.4",
    "requests>=2.32.3",
    "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
