[project]
name = "py-identity-model-fastapi-example"
version = "1.0.0"
description = "FastAPI example for py-identity-model OAuth/OIDC authentication"
authors = [{ name = "jamescrowley321", email = "jamescrowley151@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
    "py-identity-model",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
]

[tool.uv.sources]
py-identity-model = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
